--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,8 @@
+@use "./../color";
+
 .header {
-  background: rgb(85, 85, 85);
+  // background: rgb(85, 85, 85);
+  background: color.$primary;
   position: fixed;
   display: flex;
   justify-content: space-between;
